# simple-order-book

./: Cargo.toml  README.md  build.rs
proto/: healthcheck.proto  orderbook.proto
src/: main.rs
src/binance/: mod.rs  models.rs  processor.rs
src/grpc/: healthcheck.rs
