[package]
authors = ["Marcelo Castellani"]
name = "keyrock-test"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
prost = "0.11"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
simple_logger = "4.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.1.0"

[build-dependencies]
tonic-build = "0.8"
